<resources>
    <string name="app_name">AppDatamigo</string>
    <string name="facturas">Listado de Facturas</string>
    <string name="factura">Configuracion de facturas</string>
    <string name="valor_factura">Valor Factura</string>
    <string name="nit_proveedor">Nit Proveedor</string>
    <string name="guardar">Guardar</string>
    <string name="registrar_factura">Registrar Factura</string>
    <string name="sin_facturas">No existen facturas configuradas en el sistema</string>
    <string name="requerido">Requerido</string>
    <string name="succesfully">La informacion se ha guardado satisfactoriamente</string>
    <string name="detalles">Detalles</string>
    <string name="imagen_factura">Imagen Factura</string>
    <string name="foto">Foto</string>
    <string name="seleccionar_imagen">Seleccionar Imagen</string>
    <string name="ingresar_datos">"Ingresar Datos "</string>
    <string name="valor">Valor</string>
    <string name="fecha">Fecha</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="id_factura">Id Factura</string>
    <string name="eliminar_factura">Se elimino correctamente la factura</string>
    <string name="editar_factura">Se edito correctamente la factura</string>
    <string name="menu_principal">Menu principal</string>
    <string name="bienvenido">Bienvenido (a) escoja una opción</string>
    <string name="registro_documentos">Registro Documentos</string>
    <string name="congifuracion_tipo_documento">Congurar tipos de documentos</string>
    <string name="listado_tipos">Tipos de documentos</string>
    <string name="registrar_tipo_documento">Registrar tipo</string>
    <string name="nombre_tipo_documento">Digite el nombre del tipo</string>
    <string name="sigla">Digite la sigla del tipo</string>
    <string name="registrar">Registrar</string>
    <string name="tipo_documento">Tipo de Documento</string>
    <string name="editar_Campos">Editar nit y valor</string>
</resources>
